--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,5 +6,7 @@
 </div>
 
 <app-orbit-counts [satellites]="displayList"></app-orbit-counts>
-
 <!-- TODO 1: add list component to app HTML -->
+<app-orbit-list>
+	
+</app-orbit-list>
